--- a/idah/page1.html
+++ b/idah/page1.html
@@ -43,6 +43,45 @@
                 <input type="text" id="total" disabled="true" />
             </td>
         </tr>
+        <tr>
+            <td>1</td>
+            <td>Mark</td>
+            <td>
+                <input type="text" id="maybank" />
+            </td>
+            <td>
+                <input type="text" id="bankislam" />
+            </td>
+            <td>
+                <input type="text" id="total" disabled="true" />
+            </td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Mark</td>
+            <td>
+                <input type="text" id="maybank" />
+            </td>
+            <td>
+                <input type="text" id="bankislam" />
+            </td>
+            <td>
+                <input type="text" id="total" disabled="true" />
+            </td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Mark</td>
+            <td>
+                <input type="text" id="maybank" />
+            </td>
+            <td>
+                <input type="text" id="bankislam" />
+            </td>
+            <td>
+                <input type="text" id="total" disabled="true" />
+            </td>
+        </tr>
     </tbody>
 </table>
 	</body>
