--- a/dart-lin/test2.html
+++ b/dart-lin/test2.html
@@ -1,17 +1,18 @@
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Dart</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script type="text/javascript" src="maphilight/jquery.maphilight.min.js"></script>
-    <script type="text/javascript">
-    $(function() {
-        $('.map').maphilight();
-    });
-    </script>
+	<meta charset="utf-8">
+	<title>jQuery maphilight documentation</title>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script type="text/javascript" src="maphilight/jquery.maphilight.min.js"></script>
+	<script type="text/javascript">
+	$(function() {
+		$('.map').maphilight();
+	});
+	</script>
 </head>
 <body>
-
+<h1>The United States of America</h1>
+<p>This map generated from <a href="http://en.wikipedia.org/wiki/Image:Map_of_USA_with_state_names.svg">"Map of USA with state names.svg"</a>.</p>
 <img class="map" src="http://www.image-maps.com/m/private/12289/10308-bvup3f4vrkd85a0b5u0egrt2u6_dart.jpg"  width="600" height="600" usemap="#usa">
 <map name="usa">
 <area shape="rect" coords="598,598,600,600" alt="Image Map" style="outline:none;" title="Image Map" href="http://www.image-maps.com/index.php?aff=mapped_users_12289" />
